Feature: add more recipe fields (#60)
* Add style and batch size properties

* Add hop entity

* Convert decimal to double

* Implement hop actions

* Add debug-pack

* Add serialization groups

* Add tests for addHop and removeHop

* Add tests for adding and removing hops

* Test 404 routes

* Remove commented code

* Test invalid hop body

* Add hop service

* Update API documentation

* Improve API docs
